--- a/frontend_dragons/pages/register.html
+++ b/frontend_dragons/pages/register.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="index.css" rel="stylesheet" />
     <script src="/scripts/register.js"></script>
-    <title>Página Inicial</title>
+    <title>Register</title>
   </head>
 
   <body>
