Script que formata a lista para dentro do HTML

--- a/frontend_dragons/pages/register.html
+++ b/frontend_dragons/pages/register.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <form class="form" name="formulario">
-        <p>Registre um Dragon</p>
+        <h1>Registre um Dragon</h1>
         <input type="text" placeholder="nome" name="nome" id="nome"/><br />
         <input type="text" placeholder="tipo" name="tipo" id="tipo"/><br />
         <input type="button" value="Submit" id="button" onclick="sendJson()">
