--- a/frontend_dragons/pages/list.html
+++ b/frontend_dragons/pages/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="index.css" rel="stylesheet" />
@@ -11,10 +11,12 @@
 
   <body>
     <div class="container">
-        <div id="list">
-            <h1>Lista dos dragons</h1>
-            <h3 id="info"></h3>
+      <div id="list">
+        <h1>Lista dos dragons</h1>
+        <div id="info">
+          
         </div>
+      </div>
     </div>
   </body>
 </html>
