--- a/frontend_dragons/pages/list.html
+++ b/frontend_dragons/pages/list.html
@@ -16,6 +16,9 @@
         <div id="info">
           
         </div>
+        <div id="info2">
+          
+        </div>
       </div>
     </div>
   </body>
