--- a/frontend_dragons/pages/list.html
+++ b/frontend_dragons/pages/list.html
@@ -13,11 +13,9 @@
     <div class="container">
       <div id="list">
         <h1>Lista dos dragons</h1>
-        <div id="info">
-          
-        </div>
-        <div id="info2">
-          
+        <div id="informacoes">
+          <div id="info"></div>
+          <div id="info2"></div>
         </div>
       </div>
     </div>
