--- a/frontend_dragons/pages/list.html
+++ b/frontend_dragons/pages/list.html
@@ -17,6 +17,12 @@
           <div id="info"></div>
           <div id="info2"></div>
         </div>
+        <input
+            type="button"
+            value="Registrar"
+            id="button"
+            onclick="window.location.href = '/register'"
+          />
       </div>
     </div>
   </body>
