--- a/frontend_dragons/pages/list.html
+++ b/frontend_dragons/pages/list.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-list">
       <div id="list">
         <h1>Lista dos dragons</h1>
         <div id="informacoes">
