página de delete

--- a/frontend_dragons/pages/list.html
+++ b/frontend_dragons/pages/list.html
@@ -18,11 +18,17 @@
           <div id="info2"></div>
         </div>
         <input
-            type="button"
-            value="Registrar"
-            id="button"
-            onclick="window.location.href = '/register'"
-          />
+          type="button"
+          value="Registrar"
+          id="button"
+          onclick="window.location.href = '/register'"
+        />
+        <input
+          type="button"
+          value="Deletar"
+          id="button"
+          onclick="window.location.href = '/delete'"
+        />
       </div>
     </div>
   </body>
