mudando pagina de delete

--- a/frontend_dragons/pages/list.html
+++ b/frontend_dragons/pages/list.html
@@ -14,19 +14,20 @@
       <div id="list">
         <h1>Lista dos dragons</h1>
         <div id="informacoes">
-          <div id="info"></div>
+          <table id="tabela">
+            <tr>
+              <th><h3>Id</h3></th>
+              <th><h3>Nome</h3></th>
+              <th><h3>Tipo</h3></th>
+              <th></th>
+            </tr>
+          </table>
         </div>
         <input
           type="button"
           value="Registrar"
           id="button"
           onclick="window.location.href = '/register'"
-        />
-        <input
-          type="button"
-          value="Deletar"
-          id="button"
-          onclick="window.location.href = '/delete'"
         />
       </div>
     </div>
